Changing all the various ant build files to just invoke the parser generator via the -jar.